# veryfi-python

./: .gitignore  .travis.yaml  .travis.yml  404.html  AUTHORS  CHANGES.md  CONTRIBUTORS.md  ChangeLog  LICENSE  Makefile  NEWS.md  Pipfile  README.md  index.html  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflows/: python-package.yml  python-publish.yml  release-pypi.yml  release.yml  test.yml  update-docs.yml
CONTRIBUTORS/: index.html
NEWS/: index.html
reference/veryfi/: index.html
reference/veryfi/a_docs/: index.html
reference/veryfi/bank_statements/: index.html
reference/veryfi/bussines_cards/: index.html
reference/veryfi/checks/: index.html
reference/veryfi/classify/: index.html
reference/veryfi/cli/: index.html
reference/veryfi/client/: index.html
search/: search_index.json
tests/: test_a_docs.py  test_bank_statements.py  test_bussines_cards.py  test_checks.py  test_classify.py  test_cli.py  test_client.py  test_documents.py  test_errors.py  test_line_items.py  test_tags.py  test_w2s.py  test_w8s.py  test_w9s.py
tests/_documents/: test_line_items.py  test_tags.py
veryfi/: __init__.py  __main__.py  a_docs.py  bank_statements.py  bussines_cards.py  checks.py  classify.py  client.py  client_base.py  documents.py  errors.py  model.py  w2s.py  w8s.py  w9s.py
veryfi/_documents/: line_items.py  pdf_split.py  tags.py
veryfi/_w2s/: w2_split.py
veryfi/cli/: __init__.py  _common.py  a_docs.py  bank_statements.py  business_cards.py  checks.py  classify.py  documents.py  w2s.py  w8s.py  w9s.py
(+15 files in other folders)
