[metadata]
name = veryfi
description = Python implementation of the Veryfi OCR APIs
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.4
author = Veryfi, Inc.
author_email = support@veryfi.com
url = https://github.com/veryfi/veryfi-python
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
  
keywords = veryfi, veryfi.com, ocr api


[options]
packages = find:
setup_requires = setuptools_scm
install_requires = 
    requests

[options.extras_require]
tests =
    pytest
    responses