[metadata]
name = veryfi
description-file = README.md
long_description_content_type = text/markdown
author = Veryfi, Inc.
author_email = support@veryfi.com
url = https://github.com/veryfi/veryfi-python
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
  
keywords = veryfi, veryfi.com, ocr api


[options]
packages = find:


[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
